welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:4: error: type mismatch;
 found   : Unit
 required: Boolean
	boolTeen = true;
                 ^hasTeen:3: error: type mismatch;
 found   : Unit
 required: Boolean
if(isTeen(a) || isTeen(b) || isTeen(c) ){
^